--- a/templates/layouts/object/object-details/layout.html.twig
+++ b/templates/layouts/object/object-details/layout.html.twig
@@ -3,7 +3,7 @@
 {% extends 'components/panel/layout.html.twig' %}
 
 {% block iboPanelHeader %}
-    <div class="ibo-panel--medallion">{% block iboPanelMedallion %}MED.{% endblock %}</div>
+    <div class="ibo-panel--medallion">{% block iboPanelMedallion %}{% endblock %}</div>
     {{ parent() }}
 {% endblock %}
 
