--- a/templates/components/datatable/layout.js.twig
+++ b/templates/components/datatable/layout.js.twig
@@ -99,13 +99,13 @@ var oTable{{ oUIBlock.GetId() }} = $('#{{ oUIBlock.GetId() }}').DataTable({
     "processing": true,
     "serverSide": true,
     "columns": [
-        {% if oUIBlock.GetOption("select") is not empty %}
+        {% if oUIBlock.GetOption("select_mode") is not empty %}
         {
             "width": "auto",
             "searchable": false,
             "sortable": false,
-            title:
-                    {% if oUIBlock.GetOption("select") == "multi" %}
+            "title":
+                    {% if oUIBlock.GetOption("select_mode") == "multi" %}
                         '<span class="row_input"><input type="checkbox" onclick="checkAllDataTable(\'#{{ oUIBlock.GetId() }}\',this.checked);" class="checkAll" id="field_{{ oUIBlock.GetId() }}_check_all" name="field_{{ oUIBlock.GetId() }}_check_all" title="{{ 'UI:SearchValue:CheckAll'|dict_s }} / {{ 'UI:SearchValue:UncheckAll'|dict_s }}" /></span>'
                     {% else %}
                         '<span class="row_input"><input type="checkbox" style="display: none;" onclick="checkAllDataTable(\'#{{ oUIBlock.GetId() }}\',this.checked);" class="checkAll" id="field_{{ oUIBlock.GetId() }}_check_all" name="field_{{ oUIBlock.GetId() }}_check_all" title="{{ 'UI:SearchValue:CheckAll'|dict_s }} / {{ 'UI:SearchValue:UncheckAll'|dict_s }}" /></span>'
@@ -114,7 +114,7 @@ var oTable{{ oUIBlock.GetId() }} = $('#{{ oUIBlock.GetId() }}').DataTable({
             "data": "",
             "render": function (data, type, row) {
                 var oCheckboxElem =
-                        {% if oUIBlock.GetOption("select") == "multi" %}
+                        {% if oUIBlock.GetOption("select_mode") == "multi" %}
                             $('<span class="row_input"><input type="checkbox" class="selectList{{ oUIBlock.GetId() }}" name="selectObject[]" /></span>');
                         {% else %}
                             $('<span class="row_input"><input type="radio" class="selectList{{ oUIBlock.GetId() }}" name="selectObject[]" /></span>');
